# MultiProjectDemo

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/1KCharOriginIndex/: input.txt
source/20250316/: 20250316.cpp  Positive_integer_sequence.cpp  ReadFileByLines.cpp  ReadFileByLines.h
source/2025B200/: CMakeLists.txt  input.txt.txt  mian.cpp
source/2MatchChampine/: input.txt  mian.cpp
source/3SampleMempryPool/: input.txt  mian.cpp
source/4WeAreATeam/: input.txt  mian.cpp
source/KCharOriginIndex/: mian.cpp
source/MatchChampine/: CMakeLists.txt  mian.cpp
source/Project1/: mian.cpp
source/Project2/: CMakeLists.txt  mian.cpp
source/SampleMempryPool/: CMakeLists.txt  mian.cpp
